# cpp-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  DEPENDENCIES  LICENSE.TXT  README.md  ROADMAP.md  SECURITY.md  VERSION
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  check-codeql.yml  check-cppcheck.yml  check-format.yml  check-sanitizers.yml  check-tidy.yml  check-valgrind.yml  deploy-linux.yml  deploy-macos.yml  deploy-windows.yml
doc/: README.md
doc/config/: Doxyfile.config  MainPage.md
etc/cmake/: ConfigureFiles.cmake  DependenciesParser.cmake
etc/config/: Config.config  Version.config
src/: Main.cpp
src/Example/: Example.cpp  Example.hpp
tests/: CMakeLists.txt
tests/src/: Main.cpp
tests/src/Example/: Example.cpp
